create header exampel

--- a/index.html
+++ b/index.html
@@ -1,11 +1,161 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
+<html lang="en" dir="rtl">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>صفحه اصلی - وب سایت رسمی شرکت گلستان | golestan</title>
+    <link rel="stylesheet" href="./src/css/main.css" />
+    <link rel="stylesheet" href="./src/css/activ.css" />
+  </head>
+  <body>
+    <!-- #region project-->
+    <div class="wrapper">
+
+      <!-- #region header-->
+      <header class="header mobile:z-[10000] mobile:box-border mobile:p-0 mobile:w-[100%] mobile:h-[170px] mobile:fixed]
+        desktop:z-[10000] desktop:fixed desktop:flex desktop:justify-center desktop:w-[100%] desktop:h-[100px] desktop:bg-[url('/public/images/header/header-back.jpg')]
+      ">
+        <nav class="">
+          <div class="flex flex-wrap flex-col">
+            <div class="desktop:w-[1060px] desktop:h-[100px]">
+              
+              <ul class="mobile:hidden desktop:flex desktop:flex-row">
+                <li class="desktop:flex desktop:items-end desktop:w-[266px] desktop:h-[75px]">
+                  <a href="#" class="
+                    desktop:flex desktop:justify-center desktop:items-center
+                  ">
+                    <img src="./public/images/header/logo-fr.png" class="
+                      desktop:relative desktop:top-[75px]
+                    " alt="">
+                  </a>
+                </li>
+                <li class="
+                desktop:flex desktop:items-end desktop:text-center desktop:w-[117px] desktop:h-[75px]
+                ">
+                  <a href="#" class="w-[117px] h-[30px] text-[#aeb0b4] text-[15px] hover:text-white transition-all duration-300 ease-linear desktop:border-solid desktop:border-l desktop:border-l-[gray]">صفحه اصلی</a>
+                </li>
+                <li class="desktop:flex desktop:items-end desktop:w-[128px] desktop:h-[75px]">
+                  <div class="desktop:flex desktop:items-end text-center">
+                    <a href="#" class="w-[128px] h-[30px] text-[#aeb0b4] text-[15px] hover:text-white transition-all duration-300 ease-linear desktop:border-solid desktop:border-l desktop:border-l-[gray]">شرکت گلستان</a>
+                    <div class="mobile:hidden desktop:absolute desktop:top-[80px] desktop:h-[300px] desktop:w-[194px] desktop:bg-[#2b2b2b] desktop:hidden desktop:hover:block">
+                      <a href="#" class="desktop:flex pr-[13px] desktop:pt-[20px] text-[#aeb0b4] desktop:text-start leading-[20px] no-underline text-[15px] hover:text-white transition-all duration-300 ease-linear">معرفی شرکت</a>
+                      <a href="#" class="desktop:flex pr-[13px] desktop:pt-[20px] text-[#aeb0b4] desktop:text-start leading-[20px] no-underline text-[15px] hover:text-white transition-all duration-300 ease-linear">تاریخچه گلستان</a>
+                      <a href="#" class="desktop:flex pr-[13px] desktop:pt-[20px] text-[#aeb0b4] desktop:text-start leading-[20px] no-underline text-[15px] hover:text-white transition-all duration-300 ease-linear">اخبار و اطلاعیه ها</a>
+                      <a href="#" class="desktop:flex pr-[13px] desktop:pt-[20px] text-[#aeb0b4] desktop:text-start leading-[20px] no-underline text-[15px] hover:text-white transition-all duration-300 ease-linear">مسئولیت های اجتماعی</a>
+                      <a href="#" class="desktop:flex pr-[13px] desktop:pt-[20px] text-[#aeb0b4] desktop:text-start leading-[20px] no-underline text-[15px] hover:text-white transition-all duration-300 ease-linear">سازمان فروش</a>
+                      <a href="#" class="desktop:flex pr-[13px] desktop:pt-[20px] text-[#aeb0b4] desktop:text-start leading-[20px] no-underline text-[15px] hover:text-white transition-all duration-300 ease-linear">سازمان توزیع</a>
+                      <a href="#" class="desktop:flex pr-[13px] desktop:pt-[20px] text-[#aeb0b4] desktop:text-start leading-[20px] no-underline text-[15px] hover:text-white transition-all duration-300 ease-linear">برندها</a>
+                    </div>
+                  </div>
+                </li>
+                <li class="desktop:flex desktop:items-end desktop:w-[103px] desktop:h-[75px]">
+                  <div class="desktop:flex desktop:items-end text-center">
+                    <a href="#" class="w-[103px] h-[30px] text-[#aeb0b4] text-[15px] hover:text-white transition-all duration-300 ease-linear desktop:border-solid desktop:border-l desktop:border-l-[gray]">محصولات</a>
+                    <div class="mobile:hidden  desktop:absolute desktop:top-[80px] desktop:h-[500px] desktop:w-[194px] desktop:bg-[#2b2b2b] desktop:hidden desktop:hover:block ">
+                      <a href="#" class="desktop:flex desktop:pr-[35px] desktop:pt-[20px] text-[#aeb0b4] desktop:text-start leading-[20px] no-underline text-[15px] hover:text-white transition-all duration-300 ease-linear">چای</a>
+                      <a href="#" class="desktop:flex desktop:pr-[35px] desktop:pt-[20px] text-[#aeb0b4] desktop:text-start leading-[20px] no-underline text-[15px] hover:text-white transition-all duration-300 ease-linear">ناتس</a>
+                      <a href="#" class="desktop:flex desktop:pr-[35px] desktop:pt-[20px] text-[#aeb0b4] desktop:text-start leading-[20px] no-underline text-[15px] hover:text-white transition-all duration-300 ease-linear">ادویه و چاشنی</a>
+                      <a href="#" class="desktop:flex desktop:pr-[35px] desktop:pt-[20px] text-[#aeb0b4] desktop:text-start leading-[20px] no-underline text-[15px] hover:text-white transition-all duration-300 ease-linear">برنج</a>
+                      <a href="#" class="desktop:flex desktop:pr-[35px] desktop:pt-[20px] text-[#aeb0b4] desktop:text-start leading-[20px] no-underline text-[15px] hover:text-white transition-all duration-300 ease-linear">زعفران و زرشک</a>
+                      <a href="#" class="desktop:flex desktop:pr-[35px] desktop:pt-[20px] text-[#aeb0b4] desktop:text-start leading-[20px] no-underline text-[15px] hover:text-white transition-all duration-300 ease-linear">حبوبات و غلات</a>
+                      <a href="#" class="desktop:flex desktop:pr-[35px] desktop:pt-[20px] text-[#aeb0b4] desktop:text-start leading-[20px] no-underline text-[15px] hover:text-white transition-all duration-300 ease-linear">عصاره‌های گیاهی</a>
+                      <a href="#" class="desktop:flex desktop:pr-[35px] desktop:pt-[20px] text-[#aeb0b4] desktop:text-start leading-[20px] no-underline text-[15px] hover:text-white transition-all duration-300 ease-linear">قند و شکر</a>
+                      <a href="#" class="desktop:flex desktop:pr-[35px] desktop:pt-[20px] text-[#aeb0b4] desktop:text-start leading-[20px] no-underline text-[15px] hover:text-white transition-all duration-300 ease-linear">هاتی نودل</a>
+                      <a href="#" class="desktop:flex desktop:pr-[35px] desktop:pt-[20px] text-[#aeb0b4] desktop:text-start leading-[20px] no-underline text-[15px] hover:text-white transition-all duration-300 ease-linear">سایر محصولات</a>
+                      <a href="#" class="desktop:flex desktop:pr-[35px] desktop:pt-[20px] text-[#aeb0b4] desktop:text-start leading-[20px] no-underline text-[15px] hover:text-white transition-all duration-300 ease-linear">گل کیس</a>
   
-</body>
+                    </div>
+                  </div> 
+                </li>
+                <li class="desktop:flex desktop:items-end desktop:w-[77px] desktop:h-[75px]">
+                  <div class="desktop:flex desktop:items-end text-center">
+                    <a href="#" class="w-[77px] h-[30px] text-[#aeb0b4] text-[15px] hover:text-white transition-all duration-300 ease-linear desktop:border-solid desktop:border-l desktop:border-l-[gray]">وبلاگ</a>
+                    <div class="mobile:hidden  desktop:absolute desktop:top-[80px] desktop:h-[46px] desktop:w-[194px] desktop:bg-[#2b2b2b] desktop:hidden desktop:hover:block">
+                      <a href="#" class="desktop:flex pr-[13px] desktop:pt-[13px] text-[#aeb0b4] desktop:text-start leading-[20px] no-underline text-[15px] hover:text-white transition-all duration-300 ease-linear">مجله گلستان</a>
+                    </div>
+                  </div>
+                </li>
+                <li class="desktop:flex desktop:items-end text-center desktop:w-[103px] desktop:h-[75px]">
+                  <a href="#" class="w-[103px] h-[30px] text-[#aeb0b4] text-[15px] hover:text-white transition-all duration-300 ease-linear desktop:border-solid desktop:border-l desktop:border-l-[gray]">قرعه کشی</a>
+                </li>
+                <li class="desktop:flex desktop:items-end text-center desktop:w-[93px] desktop:h-[75px]">
+                  <a href="#" class="w-[93px] h-[30px] text-[#aeb0b4] text-[15px] hover:text-white transition-all duration-300 ease-linear desktop:border-solid desktop:border-l desktop:border-l-[gray]">استخدام</a>
+                </li>
+                <li class="desktop:flex desktop:items-end desktop:w-[106px] desktop:h-[75px]">
+                  <div class="desktop:flex desktop:items-end text-center">
+                    <a href="#" class="w-[106px] h-[30px] text-[#aeb0b4] text-[15px] hover:text-white transition-all duration-300 ease-linear desktop:border-solid desktop:border-l desktop:border-l-[gray]">تماس با ما</a>
+                    <div class="mobile:hidden desktop:absolute desktop:top-[80px] desktop:h-[138px] desktop:w-[194px] desktop:bg-[#2b2b2b] desktop:hidden desktop:hover:block">
+                      <a href="#" class="desktop:flex pr-[13px] desktop:pt-[20px] text-[#aeb0b4] desktop:text-start leading-[20px] no-underline text-[15px] hover:text-white transition-all duration-300 ease-linear">دفتر مرکزی</a>
+                      <a href="#" class="desktop:flex pr-[13px] desktop:pt-[20px] text-[#aeb0b4] desktop:text-start leading-[20px] no-underline text-[15px] hover:text-white transition-all duration-300 ease-linear">صدای مصرف کنندگان</a>
+                      <a href="#" class="desktop:flex pr-[13px] desktop:pt-[20px] text-[#aeb0b4] desktop:text-start leading-[20px] no-underline text-[15px] hover:text-white transition-all duration-300 ease-linear">ارتباط با مشترکین</a>
+                    </div>
+                  </div>
+                </li>
+                <li class="desktop:flex desktop:items-end text-center desktop:w-[62px] desktop:h-[75px]">
+                  <a href="#" class="w-[62px] h-[30px] text-[#aeb0b4] text-[15px] hover:text-white transition-all duration-300 ease-linear">EN</a>
+                </li>
+              </ul>
+
+              <div class="desktop:hidden mobile:w-[100%] mobile:h-[120px] mobile:bg-[url('/public/images/header/header-back.jpg')] mobile:flex mobile:items-center mobile:justify-center">
+                <a href="#">
+                  <img class="desktop:absolute desktop:right-[110px] desktop:top-[50px]" src="./public/images/header/logo-fr.png" alt="" />
+                </a>
+              </div>
+
+              <div class="desktop:hidden mobile:w-[100%] mobile:h-[50px] mobile:bg-[url('/public/images/header/header-back.jpg')] mobile:flex mobile:items-center mobile:pr-[25px]">
+                <div class="bars mobile:w-[30px] mobile:h-[30px] mobile:flex mobile:justify-center mobile:items-center mobile:flex-col mobile:gap-[4px] mobile:cursor-pointer">
+                  <div class="mobile:w-[30px] mobile:h-[4px] mobile:bg-[#AFB2B4] rounded-[5px]"></div>
+                  <div class="mobile:w-[30px] mobile:h-[4px] mobile:bg-[#AFB2B4] rounded-[5px]"></div>
+                  <div class="mobile:w-[30px] mobile:h-[4px] mobile:bg-[#AFB2B4] rounded-[5px]"></div>
+                </div>
+              </div>
+
+              <div class="desktop:hidden mobile:z-[-9999] men mobile:w-[100%] mobile:h-[360px] mobile:bg-[url('/public/images/header/header-back.jpg')] mobile:absolute mobile:top-[-100%] mobile:transition-all mobile:duration-300 mobile:ease-linear">
+                <nav class="mobile:flex mobile:flex-wrap mobile:flex-col mobile:pr-[25px] mobile:gap-[10px]">
+                  <div class="mobile:w-[100%] mobile:h-[35px] mobile:text-[#AFB2B4] mobile:hover:text-white mobile:transition-all mobile:duration-300 mobile:ease-linear mobile:text-[15px]">
+                    <a href="#">صفحه اصلی</a>
+                  </div>
+                  <div class="mobile:w-[100%] mobile:h-[35px] mobile:text-[#AFB2B4] mobile:hover:text-white mobile:transition-all mobile:duration-300 mobile:ease-linear mobile:text-[15px]">
+                    <a href="#">شرکت گلستان</a>
+                  </div>
+                  <div class="mobile:w-[100%] mobile:h-[35px] mobile:text-[#AFB2B4] mobile:hover:text-white mobile:transition-all mobile:duration-300 mobile:ease-linear mobile:text-[15px]">
+                    <a href="#">محصولات</a>
+                  </div>
+                  <div class="mobile:w-[100%] mobile:h-[35px] mobile:text-[#AFB2B4] mobile:hover:text-white mobile:transition-all mobile:duration-300 mobile:ease-linear mobile:text-[15px]">
+                    <a href="#">وبلاگ</a>
+                  </div>
+                  <div class="mobile:w-[100%] mobile:h-[35px] mobile:text-[#AFB2B4] mobile:hover:text-white mobile:transition-all mobile:duration-300 mobile:ease-linear mobile:text-[15px]">
+                    <a href="#">قرعه کشی</a>
+                  </div>
+                  <div class="mobile:w-[100%] mobile:h-[35px] mobile:text-[#AFB2B4] mobile:hover:text-white mobile:transition-all mobile:duration-300 mobile:ease-linear mobile:text-[15px]">
+                    <a href="#">استخدام</a>
+                  </div>
+                  <div class="mobile:w-[100%] mobile:h-[35px] mobile:text-[#AFB2B4] mobile:hover:text-white mobile:transition-all mobile:duration-300 mobile:ease-linear mobile:text-[15px]">
+                    <a href="#">تماس با ما</a>
+                  </div>
+                  <div class="mobile:w-[100%] mobile:h-[35px] mobile:text-[#AFB2B4] mobile:hover:text-white mobile:transition-all mobile:duration-300 mobile:ease-linear mobile:text-[15px]">
+                    <a href="#">EN</a>
+                  </div>
+                </nav>
+              </div>
+
+            </div>
+
+          </div>
+        </nav>
+      </header>
+      <!-- #endregion -->
+    
+    </div>
+    <!-- #endregion -->
+
+    <script>
+      let bars = document.querySelector(".bars");
+      let men = document.querySelector(".men");
+      bars.addEventListener("click", function () {
+        men.classList.toggle("active");
+        bars.classList.toggle("chaingBgBars");
+      });
+    </script>
+  </body>
 </html>
