update bg header

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
   />
   </head>
   <body>
-    
+
     <!-- #region project-->
     <div class="wrapper">
 
       <!-- #region header-->
-      <header class="header mobile:z-[10000] mobile:box-border mobile:p-0 mobile:w-[100%] mobile:h-[170px]  mobile:sticky mobile:top-0 mobile:left-0 desktop:z-[10000] desktop:sticky desktop:top-0 desktop:left-0 desktop:flex desktop:justify-center desktop:w-[100%] desktop:h-[100px] desktop:bg-[url('/public/images/header/header-back.jpg')]">
+      <header class="header mobile:z-[10000] mobile:box-border mobile:p-0 mobile:w-[100%] mobile:h-[170px]  mobile:sticky mobile:top-0 mobile:left-0 desktop:z-[10000] desktop:sticky desktop:top-0 desktop:left-0 desktop:flex desktop:justify-center desktop:w-[100%] desktop:h-[100px] desktop:bg-[url('/public/images/header/header-black.png')]">
         <nav class="">
           <div class="flex flex-wrap flex-col">
             <div class="desktop:w-[1060px] desktop:h-[100px]">
@@ -91,19 +91,19 @@
                   <a href="#" class="desktop:font-['Yekan'] w-[62px] h-[30px] text-[#aeb0b4] text-[15px] hover:text-white transition-all duration-300 ease-linear">EN</a>
                 </li>
               </ul>
-              <div class="desktop:hidden mobile:w-[100%] mobile:h-[120px] mobile:bg-[url('/public/images/header/header-back.jpg')] mobile:flex mobile:items-center mobile:justify-center">
+              <div class="desktop:hidden mobile:w-[100%] mobile:h-[120px] mobile:bg-[url('/public/images/header/header-back.png')] mobile:flex mobile:items-center mobile:justify-center">
                 <a href="#">
                   <img class="desktop:absolute desktop:right-[110px] desktop:top-[50px]" src="./public/images/header/logo-fr.png" alt="" />
                 </a>
               </div>
-              <div class="desktop:hidden mobile:w-[100%] mobile:h-[50px] mobile:bg-[url('/public/images/header/header-back.jpg')] mobile:flex mobile:items-center mobile:pr-[25px]">
+              <div class="desktop:hidden mobile:w-[100%] mobile:h-[50px] mobile:bg-[url('/public/images/header/header-back.png')] mobile:flex mobile:items-center mobile:pr-[25px]">
                 <div class="bars mobile:w-[30px] mobile:h-[30px] mobile:flex mobile:justify-center mobile:items-center mobile:flex-col mobile:gap-[4px] mobile:cursor-pointer">
                   <div class="mobile:w-[30px] mobile:h-[4px] mobile:bg-[#AFB2B4] rounded-[5px]"></div>
                   <div class="mobile:w-[30px] mobile:h-[4px] mobile:bg-[#AFB2B4] rounded-[5px]"></div>
                   <div class="mobile:w-[30px] mobile:h-[4px] mobile:bg-[#AFB2B4] rounded-[5px]"></div>
                 </div>
               </div>
-              <div class="desktop:hidden mobile:z-[-99] men mobile:w-[100%] mobile:h-[360px] mobile:bg-[url('/public/images/header/header-back.jpg')] mobile:absolute mobile:top-[-100%] mobile:transition-all mobile:duration-300 mobile:ease-linear">
+              <div class="desktop:hidden mobile:z-[-99] men mobile:w-[100%] mobile:h-[360px] mobile:bg-[url('/public/images/header/header-back.png')] mobile:absolute mobile:top-[-100%] mobile:transition-all mobile:duration-300 mobile:ease-linear">
                 <nav class="mobile:flex mobile:flex-wrap mobile:flex-col mobile:pr-[25px] mobile:gap-[10px]">
                   <div class="mobile:font-['Yekan'] mobile:w-[100%] mobile:h-[35px] mobile:text-[#AFB2B4] mobile:hover:text-white mobile:transition-all mobile:duration-300 mobile:ease-linear mobile:text-[15px]">
                     <a href="#">صفحه اصلی</a>
