--- a/index.html
+++ b/index.html
@@ -200,6 +200,29 @@
       </div>
       <!-- #endregion -->
 
+      <!-- #region card-1-->
+      <div class="mobile:hidden tablet:w-[100%] tablet:h-[460px] tablet:flex tablet:justify-center tablet:items-center desktop:w-[100%] desktop:h-[480px] desktop:flex desktop:justify-center desktop:items-center">
+        <div class="tablet:w-[840px] tablet:h-[290px] tablet:flex tablet:flex-row tablet:gap-5 desktop:w-[840px] desktop:h-[290px] desktop:flex desktop:flex-row desktop:gap-5">
+          <div class="tablet:w-[205px] tablet:h-[270px] tablet:flex tablet:flex-col tablet:flex-nowrap tablet:justify-around tablet:items-center desktop:w-[205px] desktop:h-[270px] desktop:flex desktop:flex-col desktop:flex-nowrap desktop:justify-around desktop:items-center border-solid border-[#dbdbdb] border-b-[1px]">
+            <img src="./public/images/card-1/img-1.png" alt="">
+            <p class="text-[16px] text-[#7C7D7E] font-['Yekan'] font-thin leading-[21px]">سرمایه انسانی</p>
+          </div>
+          <div class="tablet:w-[205px] tablet:h-[270px] tablet:flex tablet:flex-col tablet:flex-nowrap tablet:justify-around tablet:items-center desktop:w-[205px] desktop:h-[270px] desktop:flex desktop:flex-col desktop:flex-nowrap desktop:justify-around desktop:items-center border-solid border-[#dbdbdb] border-b-[1px]">
+            <img src="./public/images/card-1/img-2.png" alt="">
+            <p class="text-[16px] text-[#7C7D7E] font-['Yekan'] font-thin leading-[21px]">مراكز فروش</p>
+          </div>
+          <div class="tablet:w-[205px] tablet:h-[270px] tablet:flex tablet:flex-col tablet:flex-nowrap tablet:justify-around tablet:items-center desktop:w-[205px] desktop:h-[270px] desktop:flex desktop:flex-col desktop:flex-nowrap desktop:justify-around desktop:items-center border-solid border-[#dbdbdb] border-b-[1px]">
+            <img src="./public/images/card-1/img-3.png" alt="">
+            <p class="text-[16px] text-[#7C7D7E] font-['Yekan'] font-thin leading-[21px]">محصولات گلستان</p>
+          </div>
+          <div class="tablet:w-[205px] tablet:h-[270px] tablet:flex tablet:flex-col tablet:flex-nowrap tablet:justify-around tablet:items-center desktop:w-[205px] desktop:h-[270px] desktop:flex desktop:flex-col desktop:flex-nowrap desktop:justify-around desktop:items-center border-solid border-[#dbdbdb] border-b-[1px]">
+            <img src="./public/images/card-1/img-4.png" alt="">
+            <p class="text-[16px] text-[#7C7D7E] font-['Yekan'] font-thin leading-[21px]">مشتریان گلستان</p>
+          </div>
+        </div>
+      </div>
+      <!-- #endregion -->
+
       <!-- #region cared-->
       <section class="mobile:w-[100%] mobile:h-auto mobile:p-12 mobile:box-border mobile:bg-[#cde4b0] desktop:w-[100%] desktop:h-[700px] desktop:bg-[#cde4b0]">
         <div class="mobile:gap-6 mobile:flex mobile:flex-col mobile:items-center desktop:flex desktop:flex-row desktop:justify-center desktop:gap-[15px]">
