--- a/index.html
+++ b/index.html
@@ -223,6 +223,12 @@
       </div>
       <!-- #endregion -->
 
+      <!-- #region line-->
+      <div class="mobile:w-[100%] mobile:flex mobile:justify-center mobile:items-center mobile:h-[30px] mobile:p-2 tablet:w-[100%] tablet:flex tablet:justify-center tablet:items-center tablet:h-[30px] desktop:w-[100%] desktop:h-[30px] desktop:flex">
+        <div class="mobile:w-[98%] mobile:h-[1px] mobile:flex tablet:w-[98%] tablet:h-[1px] tablet:flex bg-[#bababa] desktop:w-[98%] desktop:h-[1px] desktop:flex"></div>
+      </div>
+      <!-- #endregion -->
+
       <!-- #region cared-->
       <section class="mobile:w-[100%] mobile:h-auto mobile:p-12 mobile:box-border mobile:bg-[#cde4b0] desktop:w-[100%] desktop:h-[700px] desktop:bg-[#cde4b0]">
         <div class="mobile:gap-6 mobile:flex mobile:flex-col mobile:items-center desktop:flex desktop:flex-row desktop:justify-center desktop:gap-[15px]">
