create card video and edit

--- a/index.html
+++ b/index.html
@@ -231,8 +231,8 @@
 
       <!-- #region cared-->
       <section class="mobile:w-[100%] mobile:h-auto mobile:p-12 mobile:box-border mobile:bg-[#cde4b0] desktop:w-[100%] desktop:h-[700px] desktop:bg-[#cde4b0]">
-        <div class="mobile:gap-6 mobile:flex mobile:flex-col mobile:items-center desktop:flex desktop:flex-row desktop:justify-center desktop:gap-[15px]">
-          <div class="bg-slate-50 mobile:w-[315px] mobile:h-[600px] desktop::w-[315px] desktop::h-[600px]">
+        <div class="mobile:gap-6 mobile:flex mobile:flex-col mobile:items-center tablet:flex tablet:flex-row tablet:justify-center tablet:gap-[15px] desktop:flex desktop:flex-row desktop:justify-center desktop:gap-[15px]">
+          <div class="bg-white mobile:hidden mobile:w-[315px] mobile:h-[600px] tablet:hidden desktop:w-[315px] desktop:h-[600px] desktop:block border-solid border-[1px] border-gray-300" style="box-shadow: -3px 3px 3px 0px rgba(0, 0, 0, 0.1);">
             <div class="mobile:w-[100%] mobile:h-[310px] desktop:w-[100%] desktop:h-[310px]">
               <img src="./public/images/cared/img-1.jpg" alt="">
             </div>
@@ -246,7 +246,7 @@
               <button class="mobile:mt-4 mobile:w-[120px] mobile:h-[40px] mobile:rounded-[8px] mobile:text-[#7C7D7E] mobile:bg-white mobile:border-solid	mobile:border-[#C8C8C8] mobile:border-[1px] mobile:text-[14px] mobile:font-['Yekan'] mobile:hover:bg-[#dc3545] mobile:hover:text-white  transition-all duration-300 ease-linear desktop:mt-4 desktop:w-[120px] desktop:h-[40px] desktop:rounded-[8px] desktop:text-[#7C7D7E] desktop:bg-white desktop:border-solid	desktop:border-[#C8C8C8] desktop:border-[1px] desktop:text-[14px] desktop:font-['Yekan'] desktop:hover:bg-[#dc3545] desktop:hover:text-white">ادامه مطلب</button>
             </div>
           </div>
-          <div class="bg-slate-50 mobile:w-[315px] mobile:h-[600px] desktop::w-[315px] desktop::h-[600px]">
+          <div class="bg-white mobile:w-[315px] mobile:h-[600px] desktop:w-[315px] desktop:h-[600px] border-solid border-[1px] border-gray-300" style="box-shadow: -3px 3px 3px 0px rgba(0, 0, 0, 0.1);">
             <div class="mobile:w-[100%] mobile:h-[310px] desktop:w-[100%] desktop:h-[310px]">
               <img src="./public/images/cared/img-2.jpg" alt="">
             </div>
@@ -261,7 +261,7 @@
               <button class="mobile:mt-4 mobile:w-[120px] mobile:h-[40px] mobile:rounded-[8px] mobile:text-[#7C7D7E] mobile:bg-white mobile:border-solid	mobile:border-[#C8C8C8] mobile:border-[1px] mobile:text-[14px] mobile:font-['Yekan'] mobile:hover:bg-[#dc3545] mobile:hover:text-white  transition-all duration-300 ease-linear desktop:mt-4 desktop:w-[120px] desktop:h-[40px] desktop:rounded-[8px] desktop:text-[#7C7D7E] desktop:bg-white desktop:border-solid	desktop:border-[#C8C8C8] desktop:border-[1px] desktop:text-[14px] desktop:font-['Yekan'] desktop:hover:bg-[#dc3545] desktop:hover:text-white">ادامه مطلب</button>
             </div>
           </div>
-          <div class="bg-slate-50 mobile:w-[315px] mobile:h-[600px] desktop::w-[315px] desktop::h-[600px]">
+          <div class="bg-white mobile:w-[315px] mobile:h-[600px] desktop:w-[315px] desktop:h-[600px] border-solid border-[1px] border-gray-300" style="box-shadow: -3px 3px 3px 0px rgba(0, 0, 0, 0.1);">
             <div class="mobile:w-[100%] mobile:h-[310px] desktop:w-[100%] desktop:h-[310px]">
               <img src="./public/images/cared/img-3.jpg" alt="">
             </div>
@@ -277,6 +277,55 @@
           </div>
         </div>
       </section>
+      <!-- #endregion -->
+
+      <!-- #region cared-video-->
+      <section class="mobile:w-[100%] mobile:h-auto mobile:p-12 mobile:box-border desktop:w-[100%] desktop:h-[700px]">
+        <div class="mobile:gap-6 mobile:flex mobile:flex-col mobile:items-center tablet:flex tablet:flex-row tablet:justify-center tablet:gap-[15px] desktop:flex desktop:flex-row desktop:justify-center desktop:gap-[15px]">
+          <div class="mobile:hidden mobile:w-[315px] mobile:h-[600px] tablet:hidden desktop:w-[315px] desktop:block desktop:h-[600px] border-solid border-[1px] border-gray-300" style="box-shadow: -3px 3px 3px 0px rgba(0, 0, 0, 0.1);">
+            <div class="mobile:w-[100%] mobile:h-[310px] desktop:w-[100%] desktop:h-[310px]">
+              <img src="./public/images/cared/img-1.jpg" alt="">
+            </div>
+            <div class="mobile:w-[275px] mobile:h-[250px] mobile:flex mobile:flex-col mobile:gap-4 mobile:mx-auto mobile:box-border mobile:mt-1 desktop:w-[275px] desktop:h-[250px] desktop:mx-auto desktop:box-border desktop:mt-1">
+              <a href="#" class="text-[17px] font-bold font-['Yekan'] leading-[28px] text-[#FF0000]">سالاد نودل</a>
+              <p class="mobile:h-[120px] mobile:font-['Yekan'] mobile:text-[#7C7F93] mobile:text-justify mobile:leading-[30px] mobile:font-thin mobile:text-[14px]">
+                نودل هاتی کارا یك میان‌وعده‌ی مغذی، در هر موقعیتی كه باشید با كمی آب جوش و یك نودل هاتی‌كارا می‌توانید از یك غذای سالم و خوشمزه لذت ببرید.
+              </p>
+              <button class="mobile:mt-4 mobile:w-[140px] mobile:h-[40px] mobile:rounded-[8px] mobile:text-[#7C7D7E] mobile:bg-white mobile:border-solid	mobile:border-[#C8C8C8] mobile:border-[1px] mobile:text-[14px] mobile:font-['Yekan'] mobile:hover:bg-[#dc3545] mobile:hover:text-white  transition-all duration-300 ease-linear desktop:mt-4 desktop:w-[140px] desktop:h-[40px] desktop:rounded-[8px] desktop:text-[#7C7D7E] desktop:bg-white desktop:border-solid	desktop:border-[#C8C8C8] desktop:border-[1px] desktop:text-[14px] desktop:font-['Yekan'] desktop:hover:bg-[#dc3545] desktop:hover:text-white">ویدیوهای بیشتر</button>
+            </div>
+          </div>
+          <div class="mobile:w-[315px] mobile:h-[600px] tablet:w-[315px] tablet:h-[600px] desktop:w-[315px] desktop:h-[600px] border-solid border-[1px] border-gray-300" style="box-shadow: -3px 3px 3px 0px rgba(0, 0, 0, 0.1);">
+            <div class="mobile:w-[100%] mobile:h-[310px] desktop:w-[100%] desktop:h-[310px]">
+              <img src="./public/images/cared/img-2.jpg" alt="">
+            </div>
+            <div class="mobile:w-[275px] mobile:h-[250px] mobile:flex mobile:flex-col mobile:gap-4 mobile:mx-auto mobile:box-border mobile:mt-1 desktop:w-[275px] desktop:h-[250px] desktop:mx-auto desktop:box-border desktop:mt-1">
+              <a href="#" class="text-[17px] font-bold font-['Yekan'] leading-[28px] text-[#FF0000]">اینستاگرام هاتی نودل</a>
+              <p class="mobile:h-[120px] mobile:font-['Yekan'] mobile:text-[#7C7F93] mobile:text-justify mobile:leading-[30px] mobile:font-thin mobile:text-[14px]">
+                نودل‌های هاتی كارا را می‌توان جایگزین سالمی برای غذاهای فست‌فودی دانست. طعم عالی،‌ ارزش غذایی بالا و قیمت مناسب از این محصول غذای سالم و كاملی ساخته است.
+              </p>
+              <button class="mobile:mt-4 mobile:w-[120px] mobile:h-[40px] mobile:rounded-[8px] mobile:text-[#7C7D7E] mobile:bg-white mobile:border-solid	mobile:border-[#C8C8C8] mobile:border-[1px] mobile:text-[14px] mobile:font-['Yekan'] mobile:hover:bg-[#dc3545] mobile:hover:text-white  transition-all duration-300 ease-linear desktop:mt-4 desktop:w-[120px] desktop:h-[40px] desktop:rounded-[8px] desktop:text-[#7C7D7E] desktop:bg-white desktop:border-solid	desktop:border-[#C8C8C8] desktop:border-[1px] desktop:text-[14px] desktop:font-['Yekan'] desktop:hover:bg-[#dc3545] desktop:hover:text-white">ادامه مطلب</button>
+            </div>
+          </div>
+          <div class="mobile:w-[315px] mobile:h-[600px] tablet:w-[315px] tablet:h-[600px] desktop:w-[315px] desktop:h-[600px] border-solid border-[1px] border-gray-300" style="box-shadow: -3px 3px 3px 0px rgba(0, 0, 0, 0.1);">
+            <div class="mobile:w-[100%] mobile:h-[310px] desktop:w-[100%] desktop:h-[310px]">
+              <img src="./public/images/cared/img-3.jpg" alt="">
+            </div>
+            <div class="mobile:w-[275px] mobile:h-[250px] mobile:flex mobile:flex-col mobile:gap-4 mobile:mx-auto mobile:box-border mobile:mt-1 desktop:w-[275px] desktop:h-[250px] desktop:mx-auto desktop:box-border desktop:mt-1">
+              <a href="#" class="text-[17px] font-bold font-['Yekan'] leading-[28px] text-[#FF0000]">برنج گلستان</a>
+              <p class="mobile:h-[120px] mobile:font-['Yekan'] mobile:text-[#7C7F93] mobile:text-justify mobile:leading-[30px] mobile:font-thin mobile:text-[14px]">
+                عطر و طعم بی‌نظیر برنج گلستان با هیچ برنج دیگری قابل مقایسه نیست. با گلستان،‌ كیفیت زندگی بالاتر از همیشه است. چرا كه مشتریان گلستان؛‌ لایق بهترین ها هستند.
+              </p>
+              <button class="mobile:mt-4 mobile:w-[160px] mobile:h-[40px] mobile:rounded-[8px] mobile:text-[#7C7D7E] mobile:bg-white mobile:border-solid	mobile:border-[#C8C8C8] mobile:border-[1px] mobile:text-[14px] mobile:font-['Yekan'] mobile:hover:bg-[#dc3545] mobile:hover:text-white  transition-all duration-300 ease-linear desktop:mt-4 desktop:w-[160px] desktop:h-[40px] desktop:rounded-[8px] desktop:text-[#7C7D7E] desktop:bg-white desktop:border-solid	desktop:border-[#C8C8C8] desktop:border-[1px] desktop:text-[14px] desktop:font-['Yekan'] desktop:hover:bg-[#dc3545] desktop:hover:text-white">مشاهده محصولات</button>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- #endregion -->
+
+      <!-- #region go-to-top -->
+      <a href="#" class="text-[18px] w-[40px] h-[40px] opacity-[0.4] bg-[#2b2b2b] fixed left-5 bottom-5 flex justify-center items-center z-[99] rounded-[2px] border-[1px] border-solid border-white hover:opacity-100 transition-all duration-300 ease-linear">
+        <img src="./public/images/page/up-arrow.svg" class="w-[30px] h-[30px]" alt="">
+      </a>
       <!-- #endregion -->
 
 
