--- a/index.html
+++ b/index.html
@@ -229,6 +229,19 @@
       </div>
       <!-- #endregion -->
 
+      <!-- #region rice-->
+      <!-- <div class="bg-slate-300 mb-4 mobile:x-[100%] mobile:h-[270px] mobile:relative tablet:x-[100%] tablet:h-[500px] tablet:relative desktop:x-[100%] desktop:h-[500px] desktop:relative">
+        <div class="w-[100%] h-[460px]">
+          <img src="./public/images/products/img-1.jpg" class="object-cover" alt="">
+        </div>
+        <div class="bg-[#E9D69F] mobile:hidden tablet:w-[100%] tablet:h-[20px] tablet:flex desktop:w-[100%] desktop:h-[20px] desktop:flex"></div>
+        <div class="bg-[#ed1c24] mobile:w-[100%] mobile:h-[93px] mobile:absolute tablet:right-[15%] mobile:bottom-0 tablet:w-[290px] tablet:h-[93px] tablet:absolute tablet:bottom-0 desktop:w-[290px] desktop:h-[93px] desktop:absolute desktop:right-[15%] desktop:bottom-0">
+          <div class="pt-[5px] pr-5 text-white text-[29px] font-['Yekan']">برنج گلستان</div>
+          <div class="pt-[5px] pr-5 text-white text-[16px] font-['Yekan'] font-normal	">معرفی محصول</div>
+        </div>
+      </div>       -->
+      <!-- #endregion -->
+
       <!-- #region cared-->
       <section class="mobile:w-[100%] mobile:h-auto mobile:p-12 mobile:box-border mobile:bg-[#cde4b0] desktop:w-[100%] desktop:h-[700px] desktop:bg-[#cde4b0]">
         <div class="mobile:gap-6 mobile:flex mobile:flex-col mobile:items-center tablet:flex tablet:flex-row tablet:justify-center tablet:gap-[15px] desktop:flex desktop:flex-row desktop:justify-center desktop:gap-[15px]">
@@ -328,6 +341,80 @@
       </a>
       <!-- #endregion -->
 
+      <!-- #region footer-->
+      <section class="flex flex-col mobile:w-[100%] mobile:h-[580px] tablet:w-[100%] tablet:h-[580px] desktop:w-[100%] desktop:h-[580px] ">
+        <div class="bg-[#eeefef] flex flex-row justify-center items-center mobile:w-[100%] mobile:h-[95px] tablet:w-[100%] tablet:h-[95px] desktop:w-[100%] desktop:h-[95px]">
+          <a href="#" class="bg-[url('/public/images/footer/img-1.png')] w-[55px] h-[55px] hover:bg-[url('/public/images/footer/img-12.png')] transition-all duration-300 ease-linear"></a>
+          <a href="#" class="bg-[url('/public/images/footer/img-3.png')] w-[55px] h-[55px] hover:bg-[url('/public/images/footer/img-2.png')] transition-all duration-300 ease-linear"></a>
+          <a href="#" class="bg-[url('/public/images/footer/img-4.png')] w-[55px] h-[55px] hover:bg-[url('/public/images/footer/img-8.png')] transition-all duration-300 ease-linear"></a>
+          <a href="#" class="bg-[url('/public/images/footer/img-5.png')] w-[55px] h-[55px] hover:bg-[url('/public/images/footer/img-9.png')] transition-all duration-300 ease-linear"></a>
+          <a href="#" class="bg-[url('/public/images/footer/img-6.png')] w-[55px] h-[55px] hover:bg-[url('/public/images/footer/img-10.png')] transition-all duration-300 ease-linear"></a>
+          <a href="#" class="bg-[url('/public/images/footer/img-7.png')] w-[55px] h-[55px] hover:bg-[url('/public/images/footer/img-11.png')] transition-all duration-300 ease-linear"></a>
+        
+        </div>
+        <div class="bg-[#ed1c24] w-[100%] h-[25px]"></div>
+        <div class="bg-[#252525] mobile:w-[100%] mobile:h-auto mobile:flex mobile:justify-center mobile:item-center tablet:w-[100%] tablet:h-[345px] tablet:flex tablet:justify-center tablet:item-center desktop:w-[100%] desktop:h-[345px] desktop:flex">
+          <div class="mobile:w-[100%] mobile:h-auto mobile:mx-5 mobile:flex mobile:flex-col tablet:w-[700px] tablet:h-[345px] tablet:flex tablet:flex-row tablet:gap-5 desktop:w-[700px] desktop:h-[345px] desktop:flex desktop:flex-row desktop:gap-5">
+            <div class="mobile:w-[100%] w-[170px] h-[345px] flex flex-col justify-between items-center">
+              <div class="">
+                <img src="./public/images/footer/img-13.png" alt="">
+              </div>
+              <div class="w-[100%] h-[50px] border-y-solid border-y-[1px] border-y-[#eeefef] flex justify-center items-center text-white text-[16px] font-['Yekan'] font-thin">چای گلستان</div>
+              <div class="w-[150px] h-[140px] flex flex-col mobile:text-center tablet:text-start desktop:text-start">
+                <a href="#" class="text-[#BCBEC0] text-[13px] font-['Yekan'] font-thin leading-7 hover:text-white transition-all duration-300 ease-linear">چای ممتاز هندوستان​</a>
+                <a href="#" class="text-[#BCBEC0] text-[13px] font-['Yekan'] font-thin leading-7 hover:text-white transition-all duration-300 ease-linear">چای ممتاز ارل گری​</a>
+                <a href="#" class="text-[#BCBEC0] text-[13px] font-['Yekan'] font-thin leading-7 hover:text-white transition-all duration-300 ease-linear">چای سيلان عطری​</a>
+                <a href="#" class="text-[#BCBEC0] text-[13px] font-['Yekan'] font-thin leading-7 hover:text-white transition-all duration-300 ease-linear">چای ممتاز سيلان​</a>
+                <a href="#" class="text-[#BCBEC0] text-[13px] font-['Yekan'] font-thin leading-7 hover:text-white transition-all duration-300 ease-linear">چای صبحانه گلستان​</a>
+              </div>
+            </div>
+            <div class="mobile:w-[100%] w-[170px] h-[345px] flex flex-col justify-between items-center">
+              <div class="">
+                <img src="./public/images/footer/img-14.png" alt="">
+              </div>
+              <div class="w-[100%] h-[50px] border-y-solid border-y-[1px] border-y-[#eeefef] flex justify-center items-center text-white text-[16px] font-['Yekan'] font-thin">تی بگ گلستان</div>
+              <div class="w-[150px] h-[140px] flex flex-col mobile:text-center tablet:text-start desktop:text-start">
+                <a href="#" class="text-[#BCBEC0] text-[13px] font-['Yekan'] font-thin leading-7 hover:text-white transition-all duration-300 ease-linear">تی بگ بلک لاين</a>
+                <a href="#" class="text-[#BCBEC0] text-[13px] font-['Yekan'] font-thin leading-7 hover:text-white transition-all duration-300 ease-linear">تی بگ ارل گری</a>
+                <a href="#" class="text-[#BCBEC0] text-[13px] font-['Yekan'] font-thin leading-7 hover:text-white transition-all duration-300 ease-linear">دمنوش نعناع</a>
+                <a href="#" class="text-[#BCBEC0] text-[13px] font-['Yekan'] font-thin leading-7 hover:text-white transition-all duration-300 ease-linear">دمنوش بابونه</a>
+                <a href="#" class="text-[#BCBEC0] text-[13px] font-['Yekan'] font-thin leading-7 hover:text-white transition-all duration-300 ease-linear">منوش چای سبز</a>
+              </div>
+            </div>
+            <div class="mobile:w-[100%] w-[170px] h-[345px] flex flex-col justify-between items-center">
+              <div class="">
+                <img src="./public/images/footer/img-15.png" alt="">
+              </div>
+              <div class="w-[100%] h-[50px] border-y-solid border-y-[1px] border-y-[#eeefef] flex justify-center items-center text-white text-[16px] font-['Yekan'] font-thin">ادويه گلستان</div>
+              <div class="w-[150px] h-[140px] flex flex-col mobile:text-center tablet:text-start desktop:text-start">
+                <a href="#" class="text-[#BCBEC0] text-[13px] font-['Yekan'] font-thin leading-7 hover:text-white transition-all duration-300 ease-linear">زعفران ممتاز خراسان</a>
+                <a href="#" class="text-[#BCBEC0] text-[13px] font-['Yekan'] font-thin leading-7 hover:text-white transition-all duration-300 ease-linear">ادویه کاری</a>
+                <a href="#" class="text-[#BCBEC0] text-[13px] font-['Yekan'] font-thin leading-7 hover:text-white transition-all duration-300 ease-linear">ادویه ماست و خیار</a>
+                <a href="#" class="text-[#BCBEC0] text-[13px] font-['Yekan'] font-thin leading-7 hover:text-white transition-all duration-300 ease-linear">فلفل سياه خالص</a>
+                <a href="#" class="text-[#BCBEC0] text-[13px] font-['Yekan'] font-thin leading-7 hover:text-white transition-all duration-300 ease-linear">زردچوبه ممتاز</a>
+              </div>
+            </div>
+            <div class="mobile:w-[100%] w-[170px] h-[345px] flex flex-col justify-between items-center">
+              <div class="">
+                <img src="./public/images/footer/img-16.png" alt="">
+              </div>
+              <div class="w-[100%] h-[50px] border-y-solid border-y-[1px] border-y-[#eeefef] flex justify-center items-center text-white text-[16px] font-['Yekan'] font-thin">حبوبات گلستان</div>
+              <div class="w-[150px] h-[140px] flex flex-col mobile:text-center tablet:text-start desktop:text-start">
+                <a href="#" class="text-[#BCBEC0] text-[13px] font-['Yekan'] font-thin leading-7 hover:text-white transition-all duration-300 ease-linear">لوبيا قرمز ممتاز</a>
+                <a href="#" class="text-[#BCBEC0] text-[13px] font-['Yekan'] font-thin leading-7 hover:text-white transition-all duration-300 ease-linear">لوبيا چيتی گلستان</a>
+                <a href="#" class="text-[#BCBEC0] text-[13px] font-['Yekan'] font-thin leading-7 hover:text-white transition-all duration-300 ease-linear">عدس كانادايی</a>
+                <a href="#" class="text-[#BCBEC0] text-[13px] font-['Yekan'] font-thin leading-7 hover:text-white transition-all duration-300 ease-linear">نخود زودپز كرمانشاه</a>
+                <a href="#" class="text-[#BCBEC0] text-[13px] font-['Yekan'] font-thin leading-7 hover:text-white transition-all duration-300 ease-linear">لوبيا سفيد گلستان</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="bg-[#252525] mobile:w-[100%] mobile:h-[125px] tablet:w-[100%] tablet:h-[125px] desktop:w-[100%] desktop:h-[125px] flex flex-col justify-center items-center gap-2">
+          <span class="text-[#9f9f9f] text-[15px] font-normal font-['Yekan'] leading-[15px]">All Right Reserved Golestan Company 2022-2025</span>
+          <span class="text-[#7b7b7b] text-[14px] font-normal font-['Yekan'] leading-[14px]">Designed By: AMIN Khodajoo</span>
+        </div>
+      </section>
+      <!-- #endregion -->
 
     </div>
     <!-- #endregion -->
